--- a/server.yml
+++ b/server.yml
@@ -1,15 +1,15 @@
-http_addr: 0.0.0.0:8080
+http_addr: 0.0.0.0:80
 log_path: ./logs/cloudops.log
 err_log_path: ./logs/cloudops-err.log
 log_level: DEBUG
 jwt:
-  singing_key: cloudoops # 密码
-  expire_time: 1m  # 有效时间
-  buffer_time: 30s  # 临期时间
-  issuer: cloudoops # 签发人
+  singing_key: cloudops # 密码
+  expire_time: 30m  # 有效时间
+  buffer_time: 1m  # 临期时间
+  issuer: cloudops # 签发人
 
 mysql:
-  dsn: root:123456@tcp(127.0.0.1:3306)/cloudoops?charset=utf8&parseTime=True&loc=Local
+  dsn: root:123456@tcp(127.0.0.1:3306)/cloudops?charset=utf8&parseTime=True&loc=Local
 
 
 #`
