--- a/server.yml
+++ b/server.yml
@@ -16,7 +16,7 @@ mysql:
 #  数据库相关配置和 SQL 语句
 #  使用以下 SQL 语句创建数据库和授权用户
 #  创建数据库
-#  CREATE DATABASE IF NOT EXISTS cloudoops DEFAULT CHARSET utf8 COLLATE utf8_general_ci;
+#  CREATE DATABASE IF NOT EXISTS cloudops DEFAULT CHARSET utf8 COLLATE utf8_general_ci;
 #  授予所有权限给 root 用户
 #  GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' IDENTIFIED BY '123456' WITH GRANT OPTION;
 #  刷新权限
